--- a/mywebsite/style.css
+++ b/mywebsite/style.css
@@ -18,6 +18,11 @@
 html, body {
     padding: 0;
     margin: 0;
+    scroll-behavior: smooth;
+}
+
+body *{
+    transition: 0.3s;
 }
 
 h1, h2, h3, h4, h5, h6, strong {
@@ -26,7 +31,7 @@ h1, h2, h3, h4, h5, h6, strong {
     font-weight: 500;
 }
 
-p, li, span, label, input, textarea {
+p, a, li, span, label, input, textarea {
     color: var(--secondaryText);
     font-family: 'Roboto Mono', monospace;
 }
@@ -96,6 +101,10 @@ h6 { font-size: 16px; }
     justify-content: space-between;
     align-items: center;
     background-color: var(--mainColor);
+}
+
+#navigation a {
+    color: var(--mainText);
 }
 
 #navigation {
@@ -327,7 +336,7 @@ h6 { font-size: 16px; }
     margin-bottom: 50px;
 }
 
-#contact-form {
+#contact-form  label{
     line-height: 2.7em;
 }
 
